--- a/serverless.yml
+++ b/serverless.yml
@@ -48,6 +48,7 @@ functions:
           method: delete
   
   ApiExtractor:
+    role: ExtractorRol
     handler: src.extractor.main.handler
     events:
       - eventBridge:
@@ -85,17 +86,40 @@ resources:
           - AttributeName: updated_at
             KeyType: RANGE
 
+    ApiExtractorExecutionLogsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: ApiExtractorExecutionLogs-${opt:stage, 'dev'}
+        BillingMode: PAY_PER_REQUEST
+        AttributeDefinitions:
+          - AttributeName: extraction_id
+            AttributeType: S
+          - AttributeName: created_at
+            AttributeType: S
+        KeySchema:
+          - AttributeName: extraction_id
+            KeyType: HASH
+          - AttributeName: created_at
+            KeyType: RANGE
+
     ApiConfigKeysSecret:
       Type: AWS::SecretsManager::Secret
       Properties:
         Description: "Api Keys for Api Extractor Config api"
         Name: api-extractor-config/${opt:stage, 'dev'}/apikeys
         SecretString: '{"rootkey": "${self:custom.root_api_key}"}'
+
+    ExtractorSecret:
+      Type: AWS::SecretsManager::Secret
+      Properties:
+        Description: "Secrets for Extractor"
+        Name: api-extractor-config/${opt:stage, 'dev'}/extractor-secrets
+        SecretString: '{"zoho_refresh_token": "", "zoho_client_id": "", "zoho_client_secret": "", "zoho_access_token": ""}'
        
     ApiConfigRol:
       Type: AWS::IAM::Role
       Properties:
-        Path: /api-consumer/
+        Path: /api-consumer/config/
         RoleName: ApiExtractorConfig-${opt:stage, 'dev'}
         AssumeRolePolicyDocument:
           Version: '2012-10-17'
@@ -141,6 +165,48 @@ resources:
                     - lambda:InvokeFunctionUrl
                   Resource:
                     - 'Fn::GetAtt': ['ApiExtractorLambdaFunction', 'Arn']
+
+    ExtractorRol:
+      Type: AWS::IAM::Role
+      Properties:
+        Path: /api-consumer/extractor/
+        RoleName: ApiExtractor-${opt:stage, 'dev'}
+        AssumeRolePolicyDocument:
+          Version: '2012-10-17'
+          Statement:
+            - Effect: Allow
+              Principal:
+                Service:
+                  - lambda.amazonaws.com
+              Action: sts:AssumeRole
+        Policies:
+          - PolicyName: ApiExtractorPolicy-${opt:stage, 'dev'}
+            PolicyDocument:
+              Version: '2012-10-17'
+              Statement:
+                - Effect: Allow
+                  Action:
+                    - logs:CreateLogGroup
+                    - logs:CreateLogStream
+                    - logs:PutLogEvents
+                  Resource:
+                    - 'Fn::Join':
+                      - ':'
+                      -
+                        - 'arn:aws:logs'
+                        - Ref: 'AWS::Region'
+                        - Ref: 'AWS::AccountId'
+                        - 'log-group:/aws/lambda/*:*:*'
+                - Effect: Allow
+                  Action:
+                    - secretsmanager:*
+                  Resource:
+                    - Ref: 'ExtractorSecret'
+                - Effect: Allow
+                  Action:
+                    - dynamodb:*
+                  Resource:
+                    - 'Fn::GetAtt': ['ApiExtractorExecutionLogsTable', 'Arn']
 
   Outputs:
     RootApiKey:
