:memo: add postman collection export file

--- a/serverless.yml
+++ b/serverless.yml
@@ -11,6 +11,7 @@ package:
   patterns:
     - '!node_modules/**'
     - '!venv/**'
+    - '!docs/**'
     - '!.git/**'
 
 custom: ${file(./config.js)}
