--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 EVENT_BRIDGE_SCHEDULE=0 1 * * ? *
 
 DEFAULT_OUTPUT_BUCKET_SUFFIX=1
+
+# For test purpose
+FAKE_API_SECRET_TO_GET_TOKEN=secret
+FAKE_API_TOKEN=token
+CONFIG_API_BASE_URL=
+CONFIG_API_KEY=
+FAKE_API_DOMAIN=
